[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://sprites/Ball.png" type="Texture" id=2]
[ext_resource path="res://sounds/ball_Shoot.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="Ball" type="RigidBody2D" groups=[
"Balls",
]]
collision_layer = 2
collision_mask = 13
mode = 3
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="LaunchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
